--- a/index.html
+++ b/index.html
@@ -1,10 +1,62 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Romassas Website</title>
+        <link rel="stylesheet" href="styles/main.css">
+    </head>
 <body>
-<h1>Romassas Portfolio</h1>
-<p>Hey there, looks like you found my website might as well stick around since you're already here. My name is Romssa Mazhar, I'm 16 years old and attend high school in Toronto,Canada.
-    I was born in July 2004 and raised here as well! This website is about me, my family and more! There are going to be pictures of some of the things/people that mean alot to me/intrest me.</p>
-<img src="images/pics.jpg" width=250 height=300/>
-   <a-href="../Portfolio/pages/fun-facts.html">Fun Facts</a>
-   <a-href="../Portfolio/pages/family.html">family</a>
-   </a-href>"../Portfolio/pages/assignments.html">assignments</a-href>a
+     <center><a href="../index.html" > </a>
+        <div id="navbar">
+    <a href="../Portfolio/pages/about-me.html">About Me</a>&ensp;
+    <a href="../Portfolio/pages/family.html">Family</a>&ensp;
+    <a href="../portfolio/pages/assignments.html">Assignments</a>&ensp;
+    <a href="../portfolio/index.html">Home Page</a> </center> &ensp;
+        </div>
+    <h1>Home Page!</h1>
+    <div>
+        <p>Hey there, looks like you found my website might as well stick around since you're already here. My name is Romssa , I'm 16 years old
+             and attend high school in Canada.This website is about me, my family and more! There are going to be pictures of some of the things/people that mean alot 
+         to me/intrest me.</p>
+         <br>
+         <br>
+         <img src="images/pic13.webp" align=left width=250 height=300/>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+       
+</div>
+<div>
 
+    <h2 style="text-align:right"><strong>Fun Facts</strong></h2>
+    <p style="text-align:right"> in "about me" youll learn some things about me, 
+    what I do in my free time,</p>
+    <p style="text-align:right"> what major events have occured and so much more. </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+<div>
+    <h2><strong>Assignments</strong></h2>
+            <p>under "Assignments" will be the work I have done during this quadmester for ICS3U0, also known as computer science.To be honest I was very nervous and was worried that this course might be very hard, and I wont be able to do it
+                but i've been working hard.So if you want to see my progress through out the quadmester, open assignment! </p>
+ </div>  
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+                <h2 style="text-align:right"><strong>Family</strong></h2>
+                <p style="text-align:right">Under "family" youll learn about the people that mean the most to me and some intressting things about them</p>
+
+                <img src="images/pics.jpg" align=left width=250 height=300/>
+</div>
 </body>
+
+</html> 
