--- a/pages/assignments.html
+++ b/pages/assignments.html
@@ -1,8 +1,24 @@
+<html>
+
 <body>
-<h1>Romassas Portfolio</h1>
+    <!DOCTYPE HTML>
+    <link rel="stylesheet"href="../styles/main.css">
+    <div id="navbar">
+        <a href="about-me.html">About Me</a>&ensp;
+        <a href="family.html">Family</a>&ensp;
+        <a href="assignments.html">Assignments</a>&ensp;
+        <a href="../index.html">Home Page</a> </center> &ensp;
+            </div>
+    
+    <title  >Romassas Website</title>
+
+    <h1>Assignments</h1>
 
 
+<p> Here is the work I have in the course during the quadmester</p>
+<h3>More Coming Soon!!!!!</h3>
 
 
 
 </body>
+</html>
