--- a/pages/family.html
+++ b/pages/family.html
@@ -1,25 +1,25 @@
 <html>
     <!DOCTYPE HTML>
-    <head>
+<head>
         <center><link rel="stylesheet"href="../styles/main.css">
-            <div id="navbar">
-        <a href="../index.html"></a>&ensp;
-       <a href="about-me.html">About Me</a>&ensp;
-       <a href="family.html">Family</a>&ensp;
-       <a href="assignments.html">Assignments</a>&ensp;
-       <a href="../index.html">Home Page</a></center>&ensp;
-            </div>
+<div id="navbar">
+<a href="../index.html"></a>&ensp;
+<a href="about-me.html">About Me</a>&ensp;
+<a href="family.html">Family</a>&ensp;
+<a href="assignments.html">Assignments</a>&ensp;
+<a href="../index.html">Home Page</a></center>&ensp;
+</div>
     <title>Romassas Website</title>
     <h1>Family</h1>
-    </head>
-    <body>
-    <p>I have a family of 5 that lives with me here in Canada, I have two brothers, one younger and one older </p>
+</head>
+<body>
+    <p>I have a family of 5 that lives with me, I have two brothers, one younger and one older </p>
     <br>
     <br>
     <p>I have a couple friends that are like family to me, I love them all very much. I dont have alot of close friends except a few, I have some in school and out of school friends too. I like hanging out with my friends whenever I get the chance</p>
     <br>
     <br>
-    <p>My older brother was born in pakistan and me and my younger brother were born here in Canada. My family believes that hard work leads to success, which is what I've been following for many years. During our free time we volunteer at our local mosque and make and deliver food to people that have been impacted by COVID-19, we also believe that we should always give good to everyone, in this case we give good to people that are in need the most.</p>
+    <p>My older brother was born in Pakistan and me and my younger brother were born in Canada. My family believes that hard work leads to success, which is what I've been following for many years. During our free time we volunteer at our local mosque and make and deliver food to people that have been impacted by COVID-19, we also believe that we should always give good to everyone, in this case we give good to people that are in need the most.</p>
     <br>
     <br>
     <br>
