--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Romassas Website</title>
         <link rel="stylesheet" href="styles/main.css">
+        <script src="scripts/buttons.js"></script>
     </head>
     <body>
      <center><a href="../index.html" > </a>
@@ -13,6 +14,8 @@
     <a href="../portfolio/index.html">Home Page</a> </center> &ensp;
         </div>
     <h1>Home Page!</h1>
+    <button class="button" onclick="greet()">Greetings</button>
+<button class="button" onclick="getName()">What's your name?</button>
     <div>
         <p>Hey there, looks like you found my website might as well stick around since you're already here. My name is Romssa , I'm a teen
               attending high school .This website is about me, my family and more! There are going to be pictures of some of the things/people that mean alot 
@@ -20,6 +23,7 @@
     <br>
     <br>
          <img src="images/pic13.webp" align=left width=250 height=300/>
+         
     <br>
     <br>
     <br>
