--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -110,5 +110,12 @@
 <br>
 <p>I havent had much expireince or exactly know what computer science is/was, I remember doing some coding in elememtary and middle schoool but not as much. I also did some coding in grade 10 because I had Graphic design, it was very fun and intrested me alot.
     I havent went into depth of coding yet, but it seems interesting and im looking forward to learning more about computer science. </p>
+<br>
+<br>
+<br>
+<button onclick=func5()>shhhhhh</button>
+<button onclick=func6()>math question</button>
+<button onclick=func7()>riddle</button>
+<button onclick=func8()>a cheesy joke</button>
 </body>
 </html>
