--- a/pages/assignments.html
+++ b/pages/assignments.html
@@ -14,5 +14,11 @@
     <h1>Assignments</h1>
 <p> Here is the work I have in the course during the quadmester</p>
 <h3>More Coming Soon!!!!!</h3>
+<div>
+<button onclick=func1()>seminar!</button>
+<button onclick=func2()>Ethics assignments!</button>
+<button onclick=func3()>Other Assignments</button>
+<button onclick=func4()>Feedback?</button>
+</div>
 </body>
 </html>
