i think im donee

--- a/pages/assignments.html
+++ b/pages/assignments.html
@@ -2,6 +2,7 @@
     <!DOCTYPE HTML>
     <head>
     <link rel="stylesheet"href="../styles/main.css">
+    <script src="../scripts/buttons.js"></script>
     <div id="navbar">
         <a href="about-me.html">About Me</a>&ensp;
         <a href="family.html">Family</a>&ensp;
@@ -10,15 +11,25 @@
     </div>
     </head>
     <body>
-    <title  >Romassas Website</title>
+    <div>
+    <title>Romassas Website</title>
     <h1>Assignments</h1>
-<p> Here is the work I have in the course during the quadmester</p>
-<h3>More Coming Soon!!!!!</h3>
-<div>
-<button onclick=func1()>seminar!</button>
-<button onclick=func2()>Ethics assignments!</button>
-<button onclick=func3()>Other Assignments</button>
-<button onclick=func4()>Feedback?</button>
-</div>
-</body>
+    <p> Here is the work I have in the course during the quadmester</p>
+    <h3>More Coming Soon!!!!!</h3>
+    </div>
+
+
+<button id=func1 class=buttons onclick="func1()">seminar!</button>&ensp;
+<button id=func2 class=buttons onclick="func2()">ethics assignment!</button>&ensp;
+<button id=func3 class=buttons onclick="func3()">other!</button>&ensp;
+<button id=func4 class=buttons onclick="func4()">other!</button>&ensp;
+<button id=func5 class=buttons onclick="func5()">other!</button>&ensp;
+<button id=func6 class=buttons onclick="func6()">other!</button>&ensp;
+<button id=func7 class=buttons onclick="func7()">other!</button>&ensp;
+<button id=func8 class=buttons onclick="func8()">other!</button>&ensp;
+<button id=func9 class=buttons onclick="func9()">other!</button>&ensp;
+<button id=func10 class=buttons onclick="func10()">feedback!</button>&ensp;
+
+    <p>this is just an rough/in progress idea^^</p>
+    </body>
 </html>
