--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -2,24 +2,21 @@
     <!DOCTYPE html>
     <head>
             <link rel="stylesheet"href="../styles/main.css">
+            <script src="../scripts/buttons.js"></script>
     </head>
     <body>
-<div id="navbar">
-<center>
-<a href="about-me.html">About Me</a>&ensp;
-<a href="family.html">Family</a>&ensp;
-<a href="assignments.html">Assignments</a>&ensp;
-<a href="../index.html">Home Page</a> </center>&ensp;
-</div>
-     <title>Romassas Website</title>
+    <div id="navbar">
+        <center>
+        <a href="about-me.html">About Me</a>&ensp;
+        <a href="family.html">Family</a>&ensp;
+        <a href="assignments.html">Assignments</a>&ensp;
+        <a href="../index.html">Home Page</a> </center>&ensp;
+    </div>
+        <title>Romassas Website</title>
         <h1>About Me!</h1>  
 <br>
 <br>
 <img src="../images/Screenshot (3).png" align=left width=250 height=250/>
-<br>
-<br>
-<br>
-<br>
 <br>
 <br>
 <br>
@@ -67,8 +64,6 @@
 <br>
 <br>
 <br>
-<br>
-<br>
 <p style="text-align:right">I have attended private school for 1 year</p>
 <br>
 <br>
@@ -81,15 +76,8 @@
 <br>
 <br>         
 <br>
-<br> 
-<br>
-<br>
 <p style="text-align:right">My future dream occupation is being a doctor in the surgery field</p>
 <img src="../images/pic9.webp" align=left width=300 height=250/>  
- <br>
- <br>
-<br>
-<br>
 <br>         
 <br>
 <br> 
@@ -103,19 +91,11 @@
 <br>
 <br>
 <br>         
-<br>
-<br> 
-<br>
 <br>     
 <br>
 <p>I havent had much expireince or exactly know what computer science is/was, I remember doing some coding in elememtary and middle schoool but not as much. I also did some coding in grade 10 because I had Graphic design, it was very fun and intrested me alot.
     I havent went into depth of coding yet, but it seems interesting and im looking forward to learning more about computer science. </p>
 <br>
 <br>
-<br>
-<button onclick=func5()>shhhhhh</button>
-<button onclick=func6()>math question</button>
-<button onclick=func7()>riddle</button>
-<button onclick=func8()>a cheesy joke</button>
 </body>
 </html>
