--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -97,5 +97,92 @@
     I havent went into depth of coding yet, but it seems interesting and im looking forward to learning more about computer science. </p>
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p>SHHHHHHHHHHHHHHH!!!!!!</p>
+<p>i call this the sceret section</p>
+<p>i have some cool buttons and activities here</p>
+<button id="encrypted" class=buttons onclick="encrypt()">encrypt!</button>&ensp;
+<button id="decrypted" class=buttons onclick="decrypt()">decrypt!</button>&ensp;
 </body>
 </html>
