--- a/pages/assignments.html
+++ b/pages/assignments.html
@@ -29,7 +29,7 @@
 <button id=func8 class=buttons onclick="func8()">other!</button>&ensp;
 <button id=func9 class=buttons onclick="func9()">other!</button>&ensp;
 <button id=func10 class=buttons onclick="func10()">feedback!</button>&ensp;
-
+<button onclick="whileSumsThrees()">sum the multiples </button>
     <p>this is just an rough/in progress idea^^</p>
     </body>
 </html>
