--- a/pages/assignments.html
+++ b/pages/assignments.html
@@ -23,10 +23,8 @@
 <button id=func2 class=buttons onclick="func2()">ethics assignment!</button>&ensp;
 <button id=func3 class=buttons onclick="func3()">other!</button>&ensp;
 <button id=func4 class=buttons onclick="func4()">other!</button>&ensp;
-<button id=func5 class=buttons onclick="func5()">other!</button>&ensp;
-<button id=func6 class=buttons onclick="func6()">other!</button>&ensp;
-<button id=func7 class=buttons onclick="func7()">other!</button>&ensp;
-<button id=func8 class=buttons onclick="func8()">other!</button>&ensp;
+<button id="encrypted" class=buttons onclick="encrypt()">encrypt!</button>&ensp;
+<button id="decrypted" class=buttons onclick="decrypt()">decrypt!</button>&ensp;
 <button id=func9 class=buttons onclick="func9()">other!</button>&ensp;
 <button id=func10 class=buttons onclick="func10()">feedback!</button>&ensp;
 <button onclick="whileSumsThrees()">sum the multiples </button>
